# K4remote

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml  config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  ci.yml.disabled  pages.yml  release.yml
app/: Cargo.toml  build.rs
app/examples/: probe.rs
app/src/: main.rs  meter.rs  spectrum.rs  tips.rs  ui.rs  update.rs  worker.rs
crates/k4-audio/: Cargo.toml
crates/k4-audio/examples/: list_audio.rs  test_tone.rs
crates/k4-audio/src/: codec.rs  device.rs  jitter.rs  lib.rs  resample.rs  ring.rs
crates/k4-audio/tests/: dsp.rs  jitter.rs  opus.rs
crates/k4-config/: Cargo.toml
crates/k4-config/src/: backup.rs  crypto.rs  lib.rs  peer.rs  secret.rs
crates/k4-config/tests/: config.rs
crates/k4-diag/: Cargo.toml
crates/k4-diag/src/: lib.rs
crates/k4-diag/tests/: diag.rs
crates/k4-kpod/: Cargo.toml
crates/k4-kpod/src/: device.rs  lib.rs
crates/k4-protocol/: Cargo.toml
crates/k4-protocol/src/: auth.rs  cat.rs  cw.rs  frame.rs  lib.rs  state.rs
crates/k4-protocol/tests/: auth.rs  cat.rs  cw.rs  frame.rs  line.rs  state.rs
crates/k4-session/: Cargo.toml
crates/k4-session/src/: lib.rs
crates/k4-session/tests/: backoff.rs  session.rs
crates/k4-sim/: Cargo.toml
crates/k4-sim/src/: lib.rs
crates/k4-sim/tests/: roundtrip.rs
crates/k4-stream/: Cargo.toml
crates/k4-stream/src/: audio.rs  lib.rs  pan.rs  render.rs
crates/k4-stream/tests/: codecs.rs  render.rs
crates/k4-transport/: Cargo.toml
crates/k4-transport/src/: lib.rs
crates/k4-transport/tests/: serial.rs  tcp.rs  tls.rs  transport.rs
docs/: README.md  user-manual.md
docs/audit/: software-audit-2026-07-11.md
docs/concept/: architecture.md  cat-server-plan.md  k4-screens.md  mode-aware-ui.md  station-accessories-plan.md  ui-design.md  ui-styleguide.md
docs/references/: external-references.md
docs/requirements/: k4-operating-gap-analysis.md  stakeholder-requirements.md  system-requirements.md  ui-gap-analysis.md  vision-and-scope.md
docs/test/: coverage.generated.md  r3-waivers.md  r5-unreached-encoders.md  test-strategy.md
docs/test/hil-runs/: 2026-07-13-kpod-framing.md  2026-07-20-panadapter-operating.md  2026-07-20-panadapter-render.md  README.md
packaging/: PKGBUILD  README.md  k4remote.desktop
packaging/windows/: k4remote.iss
site/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
