[package]
name = "k4-kpod"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false
description = "Elecraft K-Pod USB HID control surface: VFO selection + frequency control (FR-KPOD-01/02/03)."

[dependencies]
# HID device I/O is optional (L4 hardware); the pure protocol has no deps.
hidapi = { version = "2", optional = true }

[features]
default = []
# Enable the real USB HID device wrapper (needs a physical K-Pod + hidapi C lib).
hidapi = ["dep:hidapi"]
